--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["cargo", "color"] }
 dialoguer = "0.11.0"
+serde_json = "1.0.117"
