--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["cargo", "color"] }
 dialoguer = "0.11.0"
+indicatif = "0.17.8"
 serde_json = "1.0.117"
